--- a/spark_ada/Makefile
+++ b/spark_ada/Makefile
@@ -1,6 +1,6 @@
 prove:		
 	export SPARKLIB_OBJECT_DIR="sparklibobj" && \
-	gnatprove -Pmlkem -u src/mlkem.adb
+	gnatprove -Pmlkem -u src/mylemmas.adb
 compile:
 	export SPARKLIB_OBJECT_DIR="sparklibobj" && \
 	gprbuild -Pmlkem
