--- a/spark_ada/Makefile
+++ b/spark_ada/Makefile
@@ -1,5 +1,7 @@
 prove:		
 	export SPARKLIB_OBJECT_DIR="sparklibobj" && \
+	gnatprove -Pmlkem -u src/mylemmas.adb
+	export SPARKLIB_OBJECT_DIR="sparklibobj" && \
 	gnatprove -Pmlkem -u src/mlkem.adb
 compile:
 	export SPARKLIB_OBJECT_DIR="sparklibobj" && \
