--- a/spark_ada/Makefile
+++ b/spark_ada/Makefile
@@ -1,10 +1,12 @@
+proveref:
+	gnatprove -Pmlkem -u src/mlkem-reference.adb
 
 prove:		
-	export SPARKLIB_OBJECT_DIR="sparklibobj" && \
+	gnatprove -Pmlkem -u src/sumgen.adb
 	gnatprove -Pmlkem -u src/mylemmas.adb
-	export SPARKLIB_OBJECT_DIR="sparklibobj" && \
 	gnatprove -Pmlkem -u src/mlkem.adb
+	gnatprove -Pmlkem -u src/mlkem-reference.adb
+
 compile:
-	export SPARKLIB_OBJECT_DIR="sparklibobj" && \
 	gprbuild -Pmlkem
 
