--- a/spark_ada/Makefile
+++ b/spark_ada/Makefile
@@ -1,11 +1,14 @@
 proveref:
-	gnatprove -Pmlkem -u src/mlkem-reference.adb
+	gnatprove -Pmlkem -u src/refmlkem.adb --info
+
+provesum:
+	gnatprove -Pmlkem -u src/sumgen.adb
 
 prove:		
 	gnatprove -Pmlkem -u src/sumgen.adb
 	gnatprove -Pmlkem -u src/mylemmas.adb
 	gnatprove -Pmlkem -u src/mlkem.adb
-	gnatprove -Pmlkem -u src/mlkem-reference.adb
+	gnatprove -Pmlkem -u src/refmlkem.adb
 
 compile:
 	gprbuild -Pmlkem
