Bien travaillé aujourd'hui

--- a/spark_ada/Makefile
+++ b/spark_ada/Makefile
@@ -1,3 +1,6 @@
+proverecurs:
+	gnatprove -Pmlkem -u src/recursntt.adb --info
+
 proveref:
 	gnatprove -Pmlkem -u src/refmlkem.adb --info
 
@@ -9,6 +12,7 @@ prove:
 	gnatprove -Pmlkem -u src/mylemmas.adb
 	gnatprove -Pmlkem -u src/mlkem.adb
 	gnatprove -Pmlkem -u src/refmlkem.adb
+	gnatprove -Pmlkem -u src/recursntt.adb
 
 compile:
 	gprbuild -Pmlkem
